implement swap network function w pointer

--- a/simple-storage.html
+++ b/simple-storage.html
@@ -33,9 +33,9 @@
     <a href="https://www.mozilla.org/firefox/new/" target="_blank">Firefox</a> browser to use this dApp.
   </p>
   <p id="network" class="warning">
-    Please <a href="https://docs.lukso.tech/networks/l14-testnet" target="_blank">swap to the LUKSO L14 testnetwork</a>
-    in order to
-    interact.
+    Please <a id="swapnetwork" style="cursor:pointer">swap to the LUKSO L14
+      testnetwork</a>
+    in order to interact.
   </p>
   <p id="install" class="warning">
     Please install the
@@ -128,6 +128,11 @@
 
         // Restart application with logged-in extension
         await app();
+      });
+
+      // Enable network swap
+      el("#swapnetwork").addEventListener("click", async function () {
+        await addLuksoTestnet();
       });
     }
 
