implement utils balance warning

--- a/accounts.html
+++ b/accounts.html
@@ -33,9 +33,7 @@
   </p>
   <p id="network" class="warning">
     Please <a id="swapnetwork" style="cursor:pointer">swap to the LUKSO L14
-      testnetwork</a>
-    in order to see
-    your account balance.
+      testnetwork</a> to use this application.
   </p>
   <p id="install" class="warning">
     Please install the
