--- a/simple-storage.html
+++ b/simple-storage.html
@@ -25,8 +25,11 @@
     MetaMask detected. To ensure the best expirience, install the
     <a href="https://docs.lukso.tech/guides/universal-profile/browser-extension/install-browser-extension"
       target="_blank">Universal
-      Profile Browser Extension</a>. Otherwise, <a href="http://faucet.l14.lukso.network/" target="_blank">get
-      LYXt</a> to set the value.
+      Profile Browser Extension</a>.
+  </p>
+  <p class="warning" id="lowBalance">
+    Low account balance. Get some funds from <a href="http://faucet.l14.lukso.network/" target="_blank">the faucet</a>
+    in order to send transactions.
   </p>
   <p id="browser" class="warning">Please switch to a
     <a href="https://www.google.com/chrome/" target="_blank">Chrome</a> or
@@ -34,8 +37,7 @@
   </p>
   <p id="network" class="warning">
     Please <a id="swapnetwork" style="cursor:pointer">swap to the LUKSO L14
-      testnetwork</a>
-    in order to interact.
+      testnetwork</a> to use this application.
   </p>
   <p id="install" class="warning">
     Please install the
