applying notice suggestions

--- a/accounts.html
+++ b/accounts.html
@@ -12,9 +12,8 @@
   <h2>Account dApp</h2>
 
   <!-- Extension Notice -->
-  <p class="note" style="display: block;">If you have multiple Web3 extensions installed, make sure to only enable one.
-    Here
-    you can find guides to manage
+  <p class="note" style="display: block;">If you have MetaMask AND Universal Profile Browser extension installed, please
+    disable one of them! See the following guides for
     <a href="https://support.google.com/chrome_webstore/answer/2664769?hl=en" target="_blank">Chrome</a> and
     <a href="https://support.mozilla.org/en-US/kb/disable-or-remove-add-ons#w_disabling-and-removing-extensions"
       target="_blank">Firefox</a> extensions.
@@ -22,24 +21,22 @@
 
   <!-- Warnings -->
   <p class="warning" id="extension">
-    MetaMask detected. To ensure the best expirience, install the
-    <a href="https://docs.lukso.tech/guides/universal-profile/browser-extension/install-browser-extension"
-      target="_blank">Universal
-      Profile Browser Extension</a> from LUKSO.
+    You can use MetaMask with this dApp, but we recommend trying it with the <a
+      href="https://docs.lukso.tech/guides/universal-profile/browser-extension/install-browser-extension">Universal
+      Profile Browser Extension</a>.
   </p>
   <p id="browser" class="warning">Please switch to a
     <a href="https://www.google.com/chrome/" target="_blank">Chrome</a> or
     <a href="https://www.mozilla.org/firefox/new/" target="_blank">Firefox</a> browser to use this dApp.
   </p>
   <p id="network" class="warning">
-    Please <a id="swapnetwork" style="cursor:pointer">swap to the LUKSO L14
-      testnetwork</a> to use this application.
+    Please <a id="swapnetwork" style="cursor:pointer">change to the LUKSO L14 test network</a> to use this dApp.
   </p>
   <p id="install" class="warning">
     Please install the
     <a href="https://docs.lukso.tech/guides/universal-profile/browser-extension/install-browser-extension"
-      target="_blank">Universal Profile</a> or
-    <a href="https://metamask.io/" target="_blank">MetaMask</a> extension to login.
+      target="_blank">Universal Profile Browser Extension</a> or
+    <a href="https://metamask.io/" target="_blank">MetaMask</a> to use this dApp.
   </p>
   <div id="login" style="display: none">
     <button id="loginbutton">Log in to your browser extension</button>
