outsourcing style into css

--- a/accounts.html
+++ b/accounts.html
@@ -9,7 +9,7 @@
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
 
-<body class="container" style="padding-top: 3%;">
+<body class="container">
   <p><a href="index.html">Back to Landing Page</a></p>
   <h2>Account dApp</h2>
 
@@ -35,7 +35,7 @@
 
   <hr />
 
-  <b style="padding-bottom: 50px ">Repository File:</b></br><a
+  <b class="repo">Repository File:</b></br><a
     href="https://github.com/lukso-network/example-dapps-ethjs/blob/master/accounts.html"
     target="_blank">lukso-network/example-dapps-ethjs/accounts.html</a>
 
