group notes+warnings as notifications

--- a/simple-storage.html
+++ b/simple-storage.html
@@ -14,8 +14,8 @@
   <p><a href="index.html">Back to Landing Page</a></p>
   <h2>Simple Storage dApp</h2>
 
-  <!-- Import Notices and Warnings -->
-  <div id="notes"></div>
+  <!-- Import Notifications -->
+  <div id="notifications"></div>
 
   <hr />
 
