--- a/notifications.html
+++ b/notifications.html
@@ -1,12 +1,10 @@
-<!-- Extension Notice -->
+<!-- Notifications -->
 <p class="note" style="display: block;">If you have MetaMask AND Universal Profile Browser Extension installed, please
     disable one of them! See these guides for
     <a href="https://support.google.com/chrome_webstore/answer/2664769?hl=en" target="_blank">Chrome</a> and
     <a href="https://support.mozilla.org/en-US/kb/disable-or-remove-add-ons#w_disabling-and-removing-extensions"
         target="_blank">Firefox</a>.
 </p>
-
-<!-- Warnings -->
 <p class="warning" id="extension">
     You can use MetaMask with this dApp, but we recommend trying it with the <a
         href="https://docs.lukso.tech/guides/universal-profile/browser-extension/install-browser-extension">Universal
