use HTML5 style convention

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body class="container" style="padding-top: 3%;">
   <h2>Example dApps</h2>
 
-  <hr />
+  <hr>
   <h4>Examples using the Universal Profile Extension:</h4>
   <a href="accounts.html">Account dApp</a> -- See the balance of your Universal Profile
-  <br /><a href="simple-storage.html">Simple Storage dApp</a> -- Set and Get a value from a smart contract
-  <br /><a href="https://github.com/lukso-network/example-dapp-forum">Forum dApp</a> -- Create posts in a online forum
-  <br /><a href="https://github.com/lukso-network/example-dapp-lsps">LSPs dApp</a> -- Create the new Token and NFT (LSP7
+  <br><a href="simple-storage.html">Simple Storage dApp</a> -- Set and Get a value from a smart contract
+  <br><a href="https://github.com/lukso-network/example-dapp-forum">Forum dApp</a> -- Create posts in a online forum
+  <br><a href="https://github.com/lukso-network/example-dapp-lsps">LSPs dApp</a> -- Create the new Token and NFT (LSP7
   and LSP8)
 
-  <hr />
+  <hr>
   <b>Repositories:</br></b>
   <a href="https://github.com/lukso-network/example-dapps-ethjs"
     target="_blank">lukso-network/example-dapps-ethjs</a></br>
