--- a/accounts.html
+++ b/accounts.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.2.3/milligram.min.css">
-  <link rel="stylesheet" type="text/css" href="styles.css" />
+  <link rel="stylesheet" type="text/css" href="styles.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
@@ -17,7 +17,7 @@
   <!-- Import Notifications -->
   <div id="notifications"></div>
 
-  <hr />
+  <hr>
 
   <!-- Webpage Frontend-->
   <table>
@@ -34,7 +34,7 @@
     </tbody>
   </table>
 
-  <hr />
+  <hr>
 
   <b class="repo">Repository File:</b></br><a
     href="https://github.com/lukso-network/example-dapps-ethjs/blob/master/accounts.html"
