--- a/simple-storage.html
+++ b/simple-storage.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.2.3/milligram.min.css">
-  <link rel="stylesheet" type="text/css" href="styles.css" />
+  <link rel="stylesheet" type="text/css" href="styles.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
@@ -17,19 +17,19 @@
   <!-- Import Notifications -->
   <div id="notifications"></div>
 
-  <hr />
+  <hr>
 
   <!-- Webpage Frontend -->
   <div class="row">
     <div class="column column-60">
       <label>Set Value</label>
-      <input id="valueAmount" type="number" placeholder="i.e. 4500" required />
+      <input id="valueAmount" type="number" placeholder="i.e. 4500" required>
       <div class="txnote">Anyone can set/get values to/from the blockchain.
       </div>
       <button id="setValue">Set Value</button>
       <button id="getValue">Get Value</button>
 
-      <br /><br />
+      <br>
       <div id="response" class="response">
         Empty response window</div>
     </div>
@@ -39,7 +39,7 @@
     </div>
   </div>
 
-  <br /><br />
+  <br>
 
   <label>Solidity Code</label>
 
@@ -60,7 +60,7 @@
       }
   </code></pre>
 
-  <hr />
+  <hr>
 
   <b>Repository File:</b></br><a
     href="https://github.com/lukso-network/example-dapps-ethjs/blob/master/simple-storage.html"
