--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
   <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.2.3/milligram.min.css">
+  <link rel="stylesheet" type="text/css" href="styles.css">
+
   <title>dApp Examples</title>
 </head>
 
-<body class="container" style="padding-top: 3%;">
+<body class="container">
   <h2>Example dApps</h2>
 
   <hr>
@@ -23,7 +25,7 @@
     target="_blank">lukso-network/example-dapps-ethjs</a></br>
   <a href="https://github.com/lukso-network/example-dapp-forum" target="_blank">lukso-network/example-dapp-forum</a><br>
   <a href="https://github.com/lukso-network/example-dapp-lsps" target="_blank">
-    <lukso-network>lukso-netowork/example-dapps-lsps
+    <lukso-network>lukso-network/example-dapps-lsps
   </a><br>
 
 </body>
