--- a/accounts.html
+++ b/accounts.html
@@ -36,7 +36,7 @@
 
   <hr>
 
-  <b class="repo">Repository File:</b></br><a
+  <b class="repo">Repository File:</b><br><a
     href="https://github.com/lukso-network/example-dapps-ethjs/blob/master/accounts.html"
     target="_blank">lukso-network/example-dapps-ethjs/accounts.html</a>
 
