--- a/simple-storage.html
+++ b/simple-storage.html
@@ -30,6 +30,7 @@
       <button id="getValue">Get Value</button>
 
       <br>
+
       <div id="response" class="response">
         Empty response window</div>
     </div>
@@ -62,7 +63,7 @@
 
   <hr>
 
-  <b>Repository File:</b></br><a
+  <b>Repository File:</b><br><a
     href="https://github.com/lukso-network/example-dapps-ethjs/blob/master/simple-storage.html"
     target="_blank">lukso-network/example-dapps-ethjs/simple-storage.html</a>
 
