--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
   and LSP8)
 
   <hr>
-  <b>Repositories:</br></b>
+  <b>Repositories:<br></b>
   <a href="https://github.com/lukso-network/example-dapps-ethjs"
-    target="_blank">lukso-network/example-dapps-ethjs</a></br>
+    target="_blank">lukso-network/example-dapps-ethjs</a><br>
   <a href="https://github.com/lukso-network/example-dapp-forum" target="_blank">lukso-network/example-dapp-forum</a><br>
   <a href="https://github.com/lukso-network/example-dapp-lsps" target="_blank">
     <lukso-network>lukso-network/example-dapps-lsps
