update links and minor styling changes

--- a/simple-storage.html
+++ b/simple-storage.html
@@ -19,7 +19,7 @@
 
   <hr>
 
-  <!-- Webpage Frontend -->
+  <!-- Webpage Frontend-->
   <div class="row">
     <div class="column column-60">
       <label>Set Value</label>
@@ -63,9 +63,8 @@
 
   <hr>
 
-  <b>Repository File:</b><br><a
-    href="https://github.com/lukso-network/example-dapps-ethjs/blob/master/simple-storage.html"
-    target="_blank">lukso-network/example-dapps-ethjs/simple-storage.html</a>
+  <b>Repository File:</b><br><a href="https://github.com/lukso-network/example-dapps/blob/master/simple-storage.html"
+    target="_blank">lukso-network/example-dapps/simple-storage.html</a>
 
   <!-- Connect Extension & Check Network & Check Balance & Change Network-->
   <script src="./utils.js"></script>
@@ -75,7 +74,6 @@
 
   <!-- Main Function -->
   <script type="text/javascript">
-
     // ABI of the deployed contract
     const SimpleStoreABI = [{ "inputs": [], "name": "get", "outputs": [{ "internalType": "uint256", "name": "", "type": "uint256" }], "stateMutability": "view", "type": "function" }, { "inputs": [{ "internalType": "uint256", "name": "_value", "type": "uint256" }], "name": "set", "outputs": [], "stateMutability": "nonpayable", "type": "function" }];
 
@@ -132,7 +130,6 @@
 
     // Start the application
     app();
-
   </script>
 </body>
 
